springboot-test/eureka-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-test
  namespace: springboot-test
  labels:
    app: eureka-server-test
spec:
  type: NodePort
  ports:
    - port: 8761
      name: eureka-server-test
      nodePort: 8761
  selector:
    app: eureka-server-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka-server-test
  namespace: springboot-test
spec:
  serviceName: "eureka-server-test"
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server-test
  template:
    metadata:
      labels:
        app: eureka-server-test
    spec:
      containers:
        - name: eureka-server-test
          image: 192.168.5.4:82/csbr/eureka-server-test:1.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:                        
            requests:                         
              cpu: "50m"                      
              memory: "256Mi"
  podManagementPolicy: "Parallel"
