springboot-test/fe-front-warehouse.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-front-warehouse-test
  namespace: springboot-test
  labels:
    app: fe-front-warehouse-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: fe-front-warehouse-test
      nodePort: 8905
  selector:
    app: fe-front-warehouse-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fe-front-warehouse-test
  namespace: springboot-test
spec:
  serviceName: "fe-front-warehouse-test"
  replicas: 1
  selector:
    matchLabels:
      app: fe-front-warehouse-test
  template:
    metadata:
      labels:
        app: fe-front-warehouse-test
    spec:
      containers:
        - name: fe-front-warehouse-test
          image: 192.168.5.4:82/csbr/fe-front-warehouse-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8905
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
