springboot-test/fe-medical-operation.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-medical-operation-test
  namespace: springboot-test
  labels:
    app: fe-medical-operation-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: fe-medical-operation-test
      nodePort: 8907
  selector:
    app: fe-medical-operation-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fe-medical-operation-test
  namespace: springboot-test
spec:
  serviceName: "fe-medical-operation-test"
  replicas: 1
  selector:
    matchLabels:
      app: fe-medical-operation-test
  template:
    metadata:
      labels:
        app: fe-medical-operation-test
    spec:
      containers:
        - name: fe-medical-operation-test
          image: 192.168.5.4:82/csbr/fe-medical-operation-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8906
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
