springboot-test/otc-mobile.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otc-mobile-test
  namespace: springboot-test
  labels:
    app: otc-mobile-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: otc-mobile-test
      nodePort: 8086
  selector:
    app: otc-mobile-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: otc-mobile-test
  namespace: springboot-test
spec:
  serviceName: "otc-mobile-test"
  replicas: 1
  selector:
    matchLabels:
      app: otc-mobile-test
  template:
    metadata:
      labels:
        app: otc-mobile-test
    spec:
      containers:
        - name: otc-mobile-test
          image: 192.168.5.4:82/csbr/otc-mobile-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "200m"                     
              memory: "256Mi"
  podManagementPolicy: "Parallel"
