springboot-test/supply-chain-data-platform-es.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-data-platform-es-test
  namespace: springboot-test
  labels:
    app: supply-chain-data-platform-es-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: supply-chain-data-platform-es-test
      nodePort: 8085
  selector:
    app: supply-chain-data-platform-es-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supply-chain-data-platform-es-test
  namespace: springboot-test
spec:
  serviceName: "supply-chain-data-platform-es-test"
  replicas: 1
  selector:
    matchLabels:
      app: supply-chain-data-platform-es-test
  template:
    metadata:
      labels:
        app: supply-chain-data-platform-es-test
    spec:
      containers:
        - name: supply-chain-data-platform-es-test
          image: 192.168.5.4:82/csbr/supply_chain_data_platform_es-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: "200m"                     
              memory: "256Mi"
  podManagementPolicy: "Parallel"
