springboot-test/supply-chain-data-platform.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-data-platform-test
  namespace: springboot-test
  labels:
    app: supply-chain-data-platform-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: supply-chain-data-platform-test
      nodePort: 8904
  selector:
    app: supply-chain-data-platform-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supply-chain-data-platform-test
  namespace: springboot-test
spec:
  serviceName: "supply-chain-data-platform-test"
  replicas: 1
  selector:
    matchLabels:
      app: supply-chain-data-platform-test
  template:
    metadata:
      labels:
        app: supply-chain-data-platform-test
    spec:
      containers:
        - name: supply-chain-data-platform-test
          image: 192.168.5.4:82/csbr/supply-chain-data-platform-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8903
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
