springboot-test/supply-platform-management.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: supply-platform-management-test
  namespace: springboot-test
  labels:
    app: supply-platform-management-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: supply-platform-management-test
      nodePort: 8901
  selector:
    app: supply-platform-management-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supply-platform-management-test
  namespace: springboot-test
spec:
  serviceName: "supply-platform-management-test"
  replicas: 1
  selector:
    matchLabels:
      app: supply-platform-management-test
  template:
    metadata:
      labels:
        app: supply-platform-management-test
    spec:
      containers:
        - name: supply-platform-management-test
          image: 192.168.5.4:82/csbr/supply-platform-management-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8901
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
