springboot-test/user-supply-platform-management.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-supply-platform-management-test
  namespace: springboot-test
  labels:
    app: user-supply-platform-management-test
spec:
  type: NodePort
  ports:
    - port: 80
      name: user-supply-platform-management-test
      nodePort: 8903
  selector:
    app: user-supply-platform-management-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-supply-platform-management-test
  namespace: springboot-test
spec:
  serviceName: "user-supply-platform-management-test"
  replicas: 1
  selector:
    matchLabels:
      app: user-supply-platform-management-test
  template:
    metadata:
      labels:
        app: user-supply-platform-management-test
    spec:
      containers:
        - name: user-supply-platform-management-test
          image: 192.168.5.4:82/csbr/user-supply-platform-management-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8902
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
  podManagementPolicy: "Parallel"
