springboot-test/zuul-statefulset.yaml
# zuul-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zuul-server-test
  namespace: springboot-test
  labels:
    app: zuul-server-test
spec:
  type: NodePort  
  ports:
    - port: 8081
      name: zuul-server-test
      nodePort: 8082
  selector:
    app: zuul-server-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zuul-server-test
  namespace: springboot-test
spec:
  serviceName: "zuul-server"
  replicas: 1
  selector:
    matchLabels:
      app: zuul-server-test
  template:
    metadata:
      labels:
        app: zuul-server-test
    spec:
      containers:
        - name: zuul-server-test
          image: 192.168.5.4:82/csbr/zuul-server-test:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:                                  
            requests:
              cpu: "50m"                     
              memory: "256Mi"
  podManagementPolicy: "Parallel"
