springboot-test/ingress-zuul.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-zuul-test
  namespace: springboot-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - zuul.csbr.cn
    secretName: https-test-ingress-secret
  rules:
  - host: zuul.csbr.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: zuul-server-test
          servicePort: 8081
